# griid-trace

./: .gitignore  AUDIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESKTOP.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  SECURITY.md  SHIPPING.md  SPEC.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
adapters/python/: README.md  setup.py
adapters/python/tests/: test_trace_py.py
adapters/python/trace_py/: __init__.py
adapters/rust/: Cargo.toml  README.md
adapters/rust/src/: lib.rs
adapters/typescript/: README.md  package.json
adapters/typescript/src/: index.test.ts  index.ts
examples/: langchain_example.py  ollama_example.py  sample-trace.jsonl
scripts/: generate-icons.py
src/: App.tsx  cli.rs  index.css  index.rs  lib.rs  main.rs  main.tsx  trace.rs  types.ts  watcher.rs
src/components/: Analytics.tsx  Diff.tsx  Flamegraph.tsx  Replay.tsx  TraceTable.tsx
src/export/: html.rs  mod.rs
src/lib/: trace.ts
src/tui/: app.rs  event.rs  mod.rs  ui.rs
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
tauri/src/: main.rs
tests/: integration_test.rs
website/: compare.html  download.html  index.html  robots.txt  sitemap.xml
