[package]
name = "trace-rs"
version = "1.0.0"
edition = "2021"
description = "Rust adapter for griid-trace - Local-first AI agent observability"
license = "MIT OR Apache-2.0"
repository = "https://github.com/griid-trace/griid-trace"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
tokio = { version = "1.35", features = ["fs"], optional = true }

[features]
default = []
async = ["tokio"]
